--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
   <title>Test 3</title>
 </head>
 <body>
-  
+  <h1>My first push</h1>
+  <h2>third time success</h2>
+  <h3>lets check</h3>
 </body>
 </html>
