--- a/index.html
+++ b/index.html
@@ -5,10 +5,13 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Test 3</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <h1>My first push</h1>
   <h2>third time success</h2>
   <h3>lets check</h3>
+  <p>i can oush now</p>
+  <p>lets create css file and link it with it</p>
 </body>
 </html>
