first image push

--- a/index.html
+++ b/index.html
@@ -13,5 +13,7 @@
   <h3>lets check</h3>
   <p>i can oush now</p>
   <p>lets create css file and link it with it</p>
+  <img src="image1.jpeg" alt="">
+  <img src="image2.jpeg" alt="">
 </body>
 </html>
